// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JWS createJWS works with JSON payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.eyJzb21lIjoiZGF0YSJ9.dblNz-7BVLknOFIBPmt5VTG0MDls_Q69WI8OfQuqNdUp4y50-b8Ubn0xujm1ijfmfqRunpks5TyWqgMsQkR_GQ"`;

exports[`JWS createJWS works with base64url payload 1`] = `"eyJhbGciOiJFUzI1NksifQ.A_3Vet7D1DjqI3_kazPuHgFu2mtYXD4n6mZobC6lNYR5.n5ZZQZe1J7e76TGTLBpQO2R22JFoHDBi5ScfoxHz__Qy7Q6r3R11GdXmY_0ntFx6nC9QbDD19y8tTDMLUM4DAw"`;

exports[`createJWT() ES256K creates a JWT with correct format 1`] = `
Object {
  "data": "eyJhbGciOiJFUzI1NksiLCJ0eXAiOiJKV1QifQ.eyJpYXQiOjE0ODUzMjExMzMsImlzcyI6ImRpZDpldGhyOjB4ZjNiZWFjMzBjNDk4ZDllMjY4NjVmMzRmY2FhNTdkYmI5MzViMGQ3NCIsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXX0",
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "KeedpQ9Z1Nd1wdINmcVHdiNjWOEUf1llBVI5IRgKFGo_alOxqW6K30grzD0jkMVzQS6_xMJFFmticFgILGlVaw",
}
`;

exports[`createJWT() ES256K creates a JWT with correct legacy format 1`] = `
Object {
  "data": "eyJhbGciOiJFUzI1NksiLCJ0eXAiOiJKV1QifQ.eyJpYXQiOjE0ODUzMjExMzMsImlzcyI6IjB4ZjNiZWFjMzBjNDk4ZDllMjY4NjVmMzRmY2FhNTdkYmI5MzViMGQ3NCIsInJlcXVlc3RlZCI6WyJuYW1lIiwicGhvbmUiXX0",
  "header": Object {
    "alg": "ES256K",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "RMxZj8vDH151eumt-M147Ok-XkVpP7k3QYTMe7eCSzronyqSzww5V4UOMMrZkWy1hH7TFNv9_aqV50Xf1B8fTQ",
}
`;

exports[`createJWT() Ed25519 creates a JWT with correct format 1`] = `
Object {
  "data": "eyJhbGciOiJFZDI1NTE5IiwidHlwIjoiSldUIn0.eyJpYXQiOjE0ODUzMjExMzMsImlzcyI6ImRpZDpuYWNsOkJ2ckI4aUpBel8xamZxMW1SeGlFS2ZyOXFjbkxmcTVET0dyQmYyRVJVSFUiLCJyZXF1ZXN0ZWQiOlsibmFtZSIsInBob25lIl19",
  "header": Object {
    "alg": "Ed25519",
    "typ": "JWT",
  },
  "payload": Object {
    "iat": 1485321133,
    "iss": "did:nacl:BvrB8iJAz_1jfq1mRxiEKfr9qcnLfq5DOGrBf2ERUHU",
    "requested": Array [
      "name",
      "phone",
    ],
  },
  "signature": "MMjmWLR1YShMF5MneteDmzOOEUxAzV2UWkDxuSf12iu9gD7zj5y0-NcoqRUzvkqO-hbUU_QzT_r2nmiLXtPtAQ",
}
`;

exports[`verifyJWT() accepts a valid audience 1`] = `
Object {
  "aud": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() accepts a valid audience using callback_url 1`] = `
Object {
  "aud": "http://pututu.uport.me/unique",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() accepts multiple audiences 1`] = `
Object {
  "aud": Array [
    "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
    "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
  ],
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() handles ES256K algorithm with blockchainAccountId - github #14, #155 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256K algorithm with ethereum address - github #14 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() handles ES256K-R algorithm 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0xf3beac30c498d9e26865f34fcaa57dbb935b0d74",
}
`;

exports[`verifyJWT() handles ES256K-R algorithm with publicKeyHex address 1`] = `
Object {
  "hello": "world",
  "iat": 1485321133,
  "iss": "did:ethr:0x20c769ec9c0996ba7737a4826c2aaff00b1b2040",
}
`;

exports[`verifyJWT() pregenerated JWT verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0x90e45d75bd1246e0924872018647dba996a8e7b9",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;

exports[`verifyJWT() pregenerated JWT with legacy resolver verifies the JWT and return correct payload 1`] = `
Object {
  "iat": 1485321133,
  "iss": "did:ethr:0x90e45d75bd1246e0924872018647dba996a8e7b9",
  "requested": Array [
    "name",
    "phone",
  ],
}
`;
